style.css
@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');

 


.container {
    display: flex;

}
.odinLogo {
    background-color: rgb(65, 59, 59);
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 50%;
    opacity: 0.8;

    
}
.odinText {
    font-family: black ops one;
    font-weight: bold;
    font-style: normal;
    color: white;
    font-size: 40px;
}
img {
    width: 100px;
    height: 100px;
}
.formItem {
    display: flex;
    gap: 20px;
    margin-bottom: 10px;
}
label {
  width: 100px;          
  text-align: right;     
}
.flexFirstItem {
    background-image: url('./images/keegan-houser--Q_t4SCN8c4-unsplash.jpg');
    background-size: cover;
    background-position: center;    
    background-repeat: no-repeat;
}
.formContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
     
}
.serviceAwarenessText {
    font-weight: bold;
}
.serviceAwareness {
    background-color:rgb(223, 223, 223);
    padding: 20px 30px;
}
 
.accountSetup {
     
    background-color:rgb(223, 223, 223);
    gap: 20px;
    padding: 20px 30px;
    margin: 0px;
    width: 100%;
    box-sizing: border-box;

}
button {
    background-color: #596D48;
    color: white;
    border: none;
     padding:  20px; 
    border-radius: 5px;
    
}
body {
    font-family: 'Noto Sans', sans-serif;
    margin: 0;
    padding: 0;
}
a {
    text-decoration: none;
    color:#596D48;
    
}
label {
    margin: 0.5rem;
    
}
input {
    border-radius: 5px;
    margin-bottom: 15px;
    padding: 5px;
    border: 2px solid #ccc;
}
input:user-invalid {
  border-color: red;
}

input:user-valid {
  border-color: green;
}

